--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -967,6 +967,30 @@
     }, 
     {
         "25oxcKwN": "50", 
+        "3rXE9wdp": "8025001", 
+        "7WYvz1Ep": "8025", 
+        "G4L0YIB2": "ノーウィングタグ+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8025002", 
+        "7WYvz1Ep": "8025", 
+        "G4L0YIB2": "ノーウィングタグ+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8025003", 
+        "7WYvz1Ep": "8025", 
+        "G4L0YIB2": "ノーウィングタグ+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8025004", 
+        "7WYvz1Ep": "8025", 
+        "G4L0YIB2": "ノーウィングタグ+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
         "3rXE9wdp": "9000001", 
         "7WYvz1Ep": "9000", 
         "G4L0YIB2": "イベントポイント+50%"
