--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -392,6 +392,14 @@
         "uHG25vSN": "2"
     }, 
     {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8025", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "ノーウィングタグの入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106305200:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
         "6uvHX2JG": "イベントポイント数倍率アップ", 
         "7WYvz1Ep": "9000", 
         "89EvGKHx": "1", 
