--- a/F_BEAST_CP_MST.json
+++ b/F_BEAST_CP_MST.json
@@ -186,5 +186,13 @@
     {
         "5hqFc4ey": "163", 
         "hbm8t3uK": "0,11,12,12,12,12,12,12,11,12,12,12,12,12,12,11,12,12,12,12,12,12,11,12,12,12,12,12,12,11,12,12,12,12,12,12,11,12,12,12,12,12,12,11,12,12,12,12,12,12,11,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12,12"
+    }, 
+    {
+        "5hqFc4ey": "171", 
+        "hbm8t3uK": "0,3,3,3,4,3,3,4,3,3,4,3,3,4,3,4,3,4,3,4,3,3,4,3,4,4,3,4,4,4,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,"
+    }, 
+    {
+        "5hqFc4ey": "172", 
+        "hbm8t3uK": "0,7,8,7,8,7,8,7,8,7,8,7,8,8,7,8,8,7,8,8,7,8,8,8,7,8,8,8,7,8,8,8,7,8,8,8,8,8,8,8,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,"
     }
 ]
