--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -612,6 +612,12 @@
         "G4L0YIB2": "ブルーファントマ入手数+100%"
     }, 
     {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8006004", 
+        "7WYvz1Ep": "8006", 
+        "G4L0YIB2": "ブルーファントマ入手数+200%"
+    }, 
+    {
         "25oxcKwN": "65", 
         "3rXE9wdp": "8007001", 
         "7WYvz1Ep": "8007", 
@@ -646,6 +652,12 @@
         "3rXE9wdp": "8008003", 
         "7WYvz1Ep": "8008", 
         "G4L0YIB2": "魚入手数+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8008004", 
+        "7WYvz1Ep": "8008", 
+        "G4L0YIB2": "魚入手数+200%"
     }, 
     {
         "25oxcKwN": "50", 
@@ -991,6 +1003,30 @@
     }, 
     {
         "25oxcKwN": "50", 
+        "3rXE9wdp": "8026001", 
+        "7WYvz1Ep": "8026", 
+        "G4L0YIB2": "土の牙+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8026002", 
+        "7WYvz1Ep": "8026", 
+        "G4L0YIB2": "土の牙+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8026003", 
+        "7WYvz1Ep": "8026", 
+        "G4L0YIB2": "土の牙+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8026004", 
+        "7WYvz1Ep": "8026", 
+        "G4L0YIB2": "土の牙+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
         "3rXE9wdp": "9000001", 
         "7WYvz1Ep": "9000", 
         "G4L0YIB2": "イベントポイント+50%"
@@ -1123,6 +1159,12 @@
     }, 
     {
         "25oxcKwN": "10", 
+        "3rXE9wdp": "9019001", 
+        "7WYvz1Ep": "9019", 
+        "G4L0YIB2": "銀細工師の遺跡レイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
         "3rXE9wdp": "10000101", 
         "7WYvz1Ep": "10000", 
         "G4L0YIB2": "ギル獲得量+10%"
@@ -1240,5 +1282,29 @@
         "3rXE9wdp": "11000110", 
         "7WYvz1Ep": "11000", 
         "G4L0YIB2": "ユニット経験値獲得量+50%"
+    }, 
+    {
+        "25oxcKwN": "20", 
+        "3rXE9wdp": "12000020", 
+        "7WYvz1Ep": "12000", 
+        "G4L0YIB2": "アリーナポイント+20%"
+    }, 
+    {
+        "25oxcKwN": "50", 
+        "3rXE9wdp": "12000050", 
+        "7WYvz1Ep": "12000", 
+        "G4L0YIB2": "アリーナポイント+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "12000075", 
+        "7WYvz1Ep": "12000", 
+        "G4L0YIB2": "アリーナポイント+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "12000100", 
+        "7WYvz1Ep": "12000", 
+        "G4L0YIB2": "アリーナポイント+100%"
     }
 ]
