--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -243,8 +243,8 @@
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8006", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "ブルーファントマ入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106300800:600", 
+        "G4L0YIB2": "ブルーファントマ入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106300800:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -259,8 +259,8 @@
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8008", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "魚入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106301100:600", 
+        "G4L0YIB2": "魚入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106301100:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -397,6 +397,14 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "ノーウィングタグの入手数倍率増加（MAX+1200%）", 
         "YM5b90qZ": "106305200:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8026", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "土の牙の入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106305400:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -552,6 +560,14 @@
         "uHG25vSN": "7"
     }, 
     {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9019", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "銀細工師の遺跡レイドコインドロップ率", 
+        "YM5b90qZ": "20:106305300:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
         "6uvHX2JG": "ギル獲得量", 
         "7WYvz1Ep": "10000", 
         "89EvGKHx": "1", 
@@ -566,5 +582,13 @@
         "G4L0YIB2": "ユニット経験値獲得量倍率増加（MAX+100%）", 
         "YM5b90qZ": "99999", 
         "uHG25vSN": "6"
+    }, 
+    {
+        "6uvHX2JG": "アリーナポイント倍率アップ100%", 
+        "7WYvz1Ep": "12000", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "アリーナポイント倍率アップ（MAX+100%）", 
+        "YM5b90qZ": "100", 
+        "uHG25vSN": "4"
     }
 ]
