--- a/F_SEASON_EVENT_GROUP_FRIEND_LV_MST.json
+++ b/F_SEASON_EVENT_GROUP_FRIEND_LV_MST.json
@@ -5,7 +5,7 @@
         "6uvHX2JG": "フレンド効果はありません、フレンドを増やそう！", 
         "7oi9fet2": "0", 
         "A6GM9HjR": "0", 
-        "Z3f0MxPT": "誰にも呼ばれなかったクポ…。<br>もっともっと頑張るクポ～！", 
+        "Z3f0MxPT": "誰にも呼ばれなかったクポ…。<br>もっともっと頑張るクポ〜！", 
         "dX6cor8j": "", 
         "xXsbS83P": "0"
     }, 
@@ -15,7 +15,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>1個</color>プレゼント！@ユニットパラメータを<color=255:204:0>1％</color>アップ！@クエストのギル獲得量を<color=255:204:0>10％</color>アップ！@クエストのユニット経験値を<color=255:204:0>5％</color>アップ！", 
         "7oi9fet2": "1", 
         "A6GM9HjR": "1", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>この調子で頑張るクポ～。", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>この調子で頑張るクポ〜。", 
         "dX6cor8j": "23:100:1", 
         "xXsbS83P": "1"
     }, 
@@ -25,7 +25,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>1個</color>プレゼント！@ユニットパラメータを<color=255:204:0>2％</color>アップ！@クエストのギル獲得量を<color=255:204:0>15％</color>アップ！@クエストのユニット経験値を<color=255:204:0>10％</color>アップ！", 
         "7oi9fet2": "2", 
         "A6GM9HjR": "2", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>調子が出てきたクポ～？", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>調子が出てきたクポ〜？", 
         "dX6cor8j": "23:100:1", 
         "xXsbS83P": "4"
     }, 
@@ -45,7 +45,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>2個</color>プレゼント！@ユニットパラメータを<color=255:204:0>4％</color>アップ！@クエストのギル獲得量を<color=255:204:0>25％</color>アップ！@クエストのユニット経験値を<color=255:204:0>20％</color>アップ！", 
         "7oi9fet2": "4", 
         "A6GM9HjR": "11", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>人気が出てきたクポ～？", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>人気が出てきたクポ〜？", 
         "dX6cor8j": "23:100:2", 
         "xXsbS83P": "20"
     }, 
@@ -65,7 +65,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>3個</color>プレゼント！@ユニットパラメータを<color=255:204:0>6％</color>アップ！@クエストのギル獲得量を<color=255:204:0>35％</color>アップ！@クエストのユニット経験値を<color=255:204:0>30％</color>アップ！", 
         "7oi9fet2": "6", 
         "A6GM9HjR": "31", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>素晴らしい戦いぶりだクポ～。", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>素晴らしい戦いぶりだクポ〜。", 
         "dX6cor8j": "23:100:3", 
         "xXsbS83P": "40"
     }, 
@@ -75,7 +75,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>4個</color>プレゼント！@ユニットパラメータを<color=255:204:0>7％</color>アップ！@クエストのギル獲得量を<color=255:204:0>40％</color>アップ！@クエストのユニット経験値を<color=255:204:0>35％</color>アップ！", 
         "7oi9fet2": "7", 
         "A6GM9HjR": "41", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>人気者はつらいクポ～！", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>人気者はつらいクポ〜！", 
         "dX6cor8j": "23:100:4", 
         "xXsbS83P": "50"
     }, 
@@ -105,7 +105,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>5個</color>プレゼント！@ユニットパラメータを<color=255:204:0>10％</color>アップ！@クエストのギル獲得量を<color=255:204:0>60％</color>アップ！@クエストのユニット経験値を<color=255:204:0>50％</color>アップ！", 
         "7oi9fet2": "10", 
         "A6GM9HjR": "101", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>最強の助っ人だクポ～ッ！", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>最強の助っ人だクポ〜ッ！", 
         "dX6cor8j": "23:100:5", 
         "xXsbS83P": "2147483647"
     }
