--- a/F_BEAST_EXPLAIN_MST.json
+++ b/F_BEAST_EXPLAIN_MST.json
@@ -1,255 +1,269 @@
 [
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "1", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "1", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "1", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "2", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "2", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "2", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "3", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "3", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "3", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "4", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "4", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "4", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "5", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "5", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "5", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "6", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "6", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "6", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "7", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "7", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "7", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "8", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "8", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "8", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "9", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "9", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "9", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "10", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "10", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "10", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "11", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "11", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "11", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "12", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "12", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "12", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
+    }, 
+    {
+        "54PJur8x": "記入不要", 
+        "9fW0TePj": "1", 
+        "Iwfx42Wo": "13", 
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
+    }, 
+    {
+        "54PJur8x": "記入不要", 
+        "9fW0TePj": "2", 
+        "Iwfx42Wo": "13", 
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
         "54PJur8x": "記入不要", 
@@ -266,45 +280,66 @@
         "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
+        "9fW0TePj": "3", 
+        "Iwfx42Wo": "14", 
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
+    }, 
+    {
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "15", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "15", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "15", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "1", 
         "Iwfx42Wo": "16", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "2", 
         "Iwfx42Wo": "16", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }, 
     {
-        "54PJur8x": "險伜・荳崎ｦ", 
+        "54PJur8x": "記入不要", 
         "9fW0TePj": "3", 
         "Iwfx42Wo": "16", 
-        "T7aEx3Mj": "險伜・荳崎ｦ", 
-        "VC9F3eJn": "險伜・荳崎ｦ"
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
+    }, 
+    {
+        "54PJur8x": "記入不要", 
+        "9fW0TePj": "1", 
+        "Iwfx42Wo": "17", 
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
+    }, 
+    {
+        "54PJur8x": "記入不要", 
+        "9fW0TePj": "2", 
+        "Iwfx42Wo": "17", 
+        "T7aEx3Mj": "記入不要", 
+        "VC9F3eJn": "記入不要"
     }
 ]
