--- a/F_BEAST_SKILL_MST.json
+++ b/F_BEAST_SKILL_MST.json
@@ -1126,5 +1126,53 @@
         "oPD4yL58": "2@2", 
         "q4f9IdMs": "FNR003.usm", 
         "yjY4GK3X": "4"
+    }, 
+    {
+        "0HUPxDf1": "800001700", 
+        "2kq0BpnD": "80", 
+        "5A8SmwyC": "0:12001211:1:4:0&0:12001210:2:4:0", 
+        "6uvHX2JG": "敵全体に闇属性ダメージ", 
+        "76LymtEu": "11701", 
+        "7irj9hAb": "0,0,1,1", 
+        "Af2Pc0Jz": "", 
+        "G4L0YIB2": "カオティック・D", 
+        "H4zD2IQ5": "0", 
+        "Ha9G5sCS": "0,0,0,0,0,1,4200", 
+        "Isb1GDe2": "4", 
+        "J35nicFV": "0", 
+        "Jn6BbR2P": "0,0,0,0,0,0,0,1", 
+        "KF9Av5yX": "0", 
+        "KosY4a18": "", 
+        "PI18xnkD": "0", 
+        "a4hXTIm0": "1", 
+        "a9DvZ70c": "80:100:3:2", 
+        "aR5i4ewA": "0", 
+        "oPD4yL58": "2", 
+        "q4f9IdMs": "ANM001.usm", 
+        "yjY4GK3X": "1"
+    }, 
+    {
+        "0HUPxDf1": "800001701", 
+        "2kq0BpnD": "80", 
+        "5A8SmwyC": "0:12001213:1:4:0&0:12001212:2:4:0", 
+        "6uvHX2JG": "敵全体に闇属性ダメージ", 
+        "76LymtEu": "11702", 
+        "7irj9hAb": "0,0,1,1", 
+        "Af2Pc0Jz": "", 
+        "G4L0YIB2": "カオティック・D", 
+        "H4zD2IQ5": "0", 
+        "Ha9G5sCS": "0,0,0,0,0,1,12000", 
+        "Isb1GDe2": "4", 
+        "J35nicFV": "0", 
+        "Jn6BbR2P": "0,0,0,0,0,0,0,1", 
+        "KF9Av5yX": "0", 
+        "KosY4a18": "", 
+        "PI18xnkD": "0", 
+        "a4hXTIm0": "1", 
+        "a9DvZ70c": "60:100:3:2", 
+        "aR5i4ewA": "0", 
+        "oPD4yL58": "2", 
+        "q4f9IdMs": "ANM002.usm", 
+        "yjY4GK3X": "1"
     }
 ]
