--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -408,6 +408,14 @@
         "uHG25vSN": "2"
     }, 
     {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8027", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "空のスフィアの入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106305600:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
         "6uvHX2JG": "イベントポイント数倍率アップ", 
         "7WYvz1Ep": "9000", 
         "89EvGKHx": "1", 
@@ -565,6 +573,14 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "銀細工師の遺跡レイドコインドロップ率", 
         "YM5b90qZ": "20:106305300:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9020", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "Gエレメンツレイドコインドロップ率", 
+        "YM5b90qZ": "20:106305500:10", 
         "uHG25vSN": "7"
     }, 
     {
