--- a/F_BEAST_CP_MST.json
+++ b/F_BEAST_CP_MST.json
@@ -152,6 +152,10 @@
         "hbm8t3uK": "0,7,8,7,8,7,8,7,8,7,8,7,8,8,7,8,8,7,8,8,7,8,8,8,7,8,8,8,7,8,8,8,7,8,8,8,8,8,8,8,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,"
     }, 
     {
+        "5hqFc4ey": "133", 
+        "hbm8t3uK": "0,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,11,10,10,11,10,10,11,10,10,11,10,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11,10,11"
+    }, 
+    {
         "5hqFc4ey": "141", 
         "hbm8t3uK": "0,4,3,4,3,3,3,4,3,4,3,4,3,4,3,4,3,4,3,4,3,4,3,3,3,4,3,4,3,4,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,"
     }, 
