--- a/F_BEAST_SKILL_MST.json
+++ b/F_BEAST_SKILL_MST.json
@@ -912,6 +912,30 @@
         "yjY4GK3X": "1"
     }, 
     {
+        "0HUPxDf1": "800001302", 
+        "2kq0BpnD": "80", 
+        "5A8SmwyC": "0:12001205:1:4:0&0:12001204:2:4:0", 
+        "6uvHX2JG": "敵全体に光属性ダメージ", 
+        "76LymtEu": "11303", 
+        "7irj9hAb": "0,0,1,1", 
+        "Af2Pc0Jz": "", 
+        "G4L0YIB2": "聖なる審判", 
+        "H4zD2IQ5": "0", 
+        "Ha9G5sCS": "0,0,0,0,0,1,21000", 
+        "Isb1GDe2": "4", 
+        "J35nicFV": "0", 
+        "Jn6BbR2P": "0,0,0,0,0,0,1,0", 
+        "KF9Av5yX": "0", 
+        "KosY4a18": "", 
+        "PI18xnkD": "0", 
+        "a4hXTIm0": "1", 
+        "a9DvZ70c": "110:100:3:2", 
+        "aR5i4ewA": "0", 
+        "oPD4yL58": "2", 
+        "q4f9IdMs": "ALX003.usm", 
+        "yjY4GK3X": "1"
+    }, 
+    {
         "0HUPxDf1": "800001400", 
         "2kq0BpnD": "80@4", 
         "5A8SmwyC": "0:12001101:1:4:0&0:12001100:2:4:0", 
