--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -1027,6 +1027,30 @@
     }, 
     {
         "25oxcKwN": "50", 
+        "3rXE9wdp": "8027001", 
+        "7WYvz1Ep": "8027", 
+        "G4L0YIB2": "空のスフィア+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8027002", 
+        "7WYvz1Ep": "8027", 
+        "G4L0YIB2": "空のスフィア+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8027003", 
+        "7WYvz1Ep": "8027", 
+        "G4L0YIB2": "空のスフィア+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8027004", 
+        "7WYvz1Ep": "8027", 
+        "G4L0YIB2": "空のスフィア+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
         "3rXE9wdp": "9000001", 
         "7WYvz1Ep": "9000", 
         "G4L0YIB2": "イベントポイント+50%"
@@ -1162,6 +1186,12 @@
         "3rXE9wdp": "9019001", 
         "7WYvz1Ep": "9019", 
         "G4L0YIB2": "銀細工師の遺跡レイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9020001", 
+        "7WYvz1Ep": "9020", 
+        "G4L0YIB2": "Gエレメンツレイドコイン　10%"
     }, 
     {
         "25oxcKwN": "10", 
