--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -684,6 +684,12 @@
         "G4L0YIB2": "魔片入手数+100%"
     }, 
     {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8009005", 
+        "7WYvz1Ep": "8009", 
+        "G4L0YIB2": "魔片入手数+200%"
+    }, 
+    {
         "25oxcKwN": "50", 
         "3rXE9wdp": "8010001", 
         "7WYvz1Ep": "8010", 
