--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -1201,6 +1201,12 @@
     }, 
     {
         "25oxcKwN": "10", 
+        "3rXE9wdp": "9021001", 
+        "7WYvz1Ep": "9021", 
+        "G4L0YIB2": "デウスレイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
         "3rXE9wdp": "10000101", 
         "7WYvz1Ep": "10000", 
         "G4L0YIB2": "ギル獲得量+10%"
