--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -584,6 +584,14 @@
         "uHG25vSN": "7"
     }, 
     {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9021", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "デウスレイドドコインドロップ率", 
+        "YM5b90qZ": "20:106305700:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
         "6uvHX2JG": "ギル獲得量", 
         "7WYvz1Ep": "10000", 
         "89EvGKHx": "1", 
