--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -1057,6 +1057,30 @@
     }, 
     {
         "25oxcKwN": "50", 
+        "3rXE9wdp": "8028001", 
+        "7WYvz1Ep": "8028", 
+        "G4L0YIB2": "青の宝玉+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8028002", 
+        "7WYvz1Ep": "8028", 
+        "G4L0YIB2": "青の宝玉+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8028003", 
+        "7WYvz1Ep": "8028", 
+        "G4L0YIB2": "青の宝玉+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8028004", 
+        "7WYvz1Ep": "8028", 
+        "G4L0YIB2": "青の宝玉+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
         "3rXE9wdp": "9000001", 
         "7WYvz1Ep": "9000", 
         "G4L0YIB2": "イベントポイント+50%"
