--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -416,6 +416,14 @@
         "uHG25vSN": "2"
     }, 
     {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8028", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "青の宝玉の入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106305800:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
         "6uvHX2JG": "イベントポイント数倍率アップ", 
         "7WYvz1Ep": "9000", 
         "89EvGKHx": "1", 
