--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -708,6 +708,12 @@
         "G4L0YIB2": "白の宝玉入手数+100%"
     }, 
     {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8010004", 
+        "7WYvz1Ep": "8010", 
+        "G4L0YIB2": "白の宝玉入手数+200%"
+    }, 
+    {
         "25oxcKwN": "50", 
         "3rXE9wdp": "8011001", 
         "7WYvz1Ep": "8011", 
