--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -1086,6 +1086,42 @@
         "G4L0YIB2": "青の宝玉+200%"
     }, 
     {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "8029001", 
+        "7WYvz1Ep": "8029", 
+        "G4L0YIB2": "マグマのいしの欠片+10%"
+    }, 
+    {
+        "25oxcKwN": "30", 
+        "3rXE9wdp": "8029002", 
+        "7WYvz1Ep": "8029", 
+        "G4L0YIB2": "マグマのいしの欠片+30%"
+    }, 
+    {
+        "25oxcKwN": "50", 
+        "3rXE9wdp": "8029003", 
+        "7WYvz1Ep": "8029", 
+        "G4L0YIB2": "マグマのいしの欠片+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8029004", 
+        "7WYvz1Ep": "8029", 
+        "G4L0YIB2": "マグマのいしの欠片+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8029005", 
+        "7WYvz1Ep": "8029", 
+        "G4L0YIB2": "マグマのいしの欠片+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8029006", 
+        "7WYvz1Ep": "8029", 
+        "G4L0YIB2": "マグマのいしの欠片+200%"
+    }, 
+    {
         "25oxcKwN": "50", 
         "3rXE9wdp": "9000001", 
         "7WYvz1Ep": "9000", 
@@ -1234,6 +1270,12 @@
         "3rXE9wdp": "9021001", 
         "7WYvz1Ep": "9021", 
         "G4L0YIB2": "デウスレイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9022001", 
+        "7WYvz1Ep": "9022", 
+        "G4L0YIB2": "防衛システムレイドコイン　10%"
     }, 
     {
         "25oxcKwN": "10", 
