--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -424,6 +424,14 @@
         "uHG25vSN": "2"
     }, 
     {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8029", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "マグマのいしの欠片の入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106306000:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
         "6uvHX2JG": "イベントポイント数倍率アップ", 
         "7WYvz1Ep": "9000", 
         "89EvGKHx": "1", 
@@ -597,6 +605,14 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "デウスレイドドコインドロップ率", 
         "YM5b90qZ": "20:106305700:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9022", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "防衛システムレイドコインドロップ率", 
+        "YM5b90qZ": "20:106305900:10", 
         "uHG25vSN": "7"
     }, 
     {
