--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -732,6 +732,12 @@
         "G4L0YIB2": "風の牙入手数+100%"
     }, 
     {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8011004", 
+        "7WYvz1Ep": "8011", 
+        "G4L0YIB2": "風の牙入手数+200%"
+    }, 
+    {
         "25oxcKwN": "50", 
         "3rXE9wdp": "8012001", 
         "7WYvz1Ep": "8012", 
@@ -748,6 +754,12 @@
         "3rXE9wdp": "8012003", 
         "7WYvz1Ep": "8012", 
         "G4L0YIB2": "髪飾り入手数+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8012004", 
+        "7WYvz1Ep": "8012", 
+        "G4L0YIB2": "髪飾り入手数+200%"
     }, 
     {
         "25oxcKwN": "50", 
@@ -768,6 +780,12 @@
         "G4L0YIB2": "1／35神羅兵入手数+100%"
     }, 
     {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8013004", 
+        "7WYvz1Ep": "8013", 
+        "G4L0YIB2": "1／35神羅兵入手数+200%"
+    }, 
+    {
         "25oxcKwN": "50", 
         "3rXE9wdp": "8014001", 
         "7WYvz1Ep": "8014", 
@@ -784,6 +802,12 @@
         "3rXE9wdp": "8014003", 
         "7WYvz1Ep": "8014", 
         "G4L0YIB2": "ふるい小銭入手数+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8014004", 
+        "7WYvz1Ep": "8014", 
+        "G4L0YIB2": "ふるい小銭入手数+200%"
     }, 
     {
         "25oxcKwN": "50", 
@@ -1123,6 +1147,78 @@
     }, 
     {
         "25oxcKwN": "50", 
+        "3rXE9wdp": "8030001", 
+        "7WYvz1Ep": "8030", 
+        "G4L0YIB2": "BEクーポン+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8030002", 
+        "7WYvz1Ep": "8030", 
+        "G4L0YIB2": "BEクーポン+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8030003", 
+        "7WYvz1Ep": "8030", 
+        "G4L0YIB2": "BEクーポン+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8030004", 
+        "7WYvz1Ep": "8030", 
+        "G4L0YIB2": "BEクーポン+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
+        "3rXE9wdp": "8031001", 
+        "7WYvz1Ep": "8031", 
+        "G4L0YIB2": "くるみ+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8031002", 
+        "7WYvz1Ep": "8031", 
+        "G4L0YIB2": "くるみ+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8031003", 
+        "7WYvz1Ep": "8031", 
+        "G4L0YIB2": "くるみ+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8031004", 
+        "7WYvz1Ep": "8031", 
+        "G4L0YIB2": "くるみ+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
+        "3rXE9wdp": "8032001", 
+        "7WYvz1Ep": "8032", 
+        "G4L0YIB2": "ギサールの種+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8032002", 
+        "7WYvz1Ep": "8032", 
+        "G4L0YIB2": "ギサールの種+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8032003", 
+        "7WYvz1Ep": "8032", 
+        "G4L0YIB2": "ギサールの種+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8032004", 
+        "7WYvz1Ep": "8032", 
+        "G4L0YIB2": "ギサールの種+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
         "3rXE9wdp": "9000001", 
         "7WYvz1Ep": "9000", 
         "G4L0YIB2": "イベントポイント+50%"
@@ -1276,6 +1372,36 @@
         "3rXE9wdp": "9022001", 
         "7WYvz1Ep": "9022", 
         "G4L0YIB2": "防衛システムレイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9023001", 
+        "7WYvz1Ep": "9023", 
+        "G4L0YIB2": "ガストンレイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9024001", 
+        "7WYvz1Ep": "9024", 
+        "G4L0YIB2": "ダチャオ像レイドコイン　10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9025001", 
+        "7WYvz1Ep": "9025", 
+        "G4L0YIB2": "エンゲルスレイドコイン 10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9026001", 
+        "7WYvz1Ep": "9026", 
+        "G4L0YIB2": "3周年記念レイドコイン 10%"
+    }, 
+    {
+        "25oxcKwN": "10", 
+        "3rXE9wdp": "9027001", 
+        "7WYvz1Ep": "9027", 
+        "G4L0YIB2": "キングゴールデンボムレイドコイン 10%"
     }, 
     {
         "25oxcKwN": "10", 
