--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -283,32 +283,32 @@
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8011", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "風の牙入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106301600:600", 
+        "G4L0YIB2": "風の牙入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106301600:1200", 
         "uHG25vSN": "2"
     }, 
     {
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8012", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "髪飾り入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106301800:600", 
+        "G4L0YIB2": "髪飾り入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106301800:1200", 
         "uHG25vSN": "2"
     }, 
     {
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8013", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "1／35神羅兵入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106302700:600", 
+        "G4L0YIB2": "1／35神羅兵入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106302700:1200", 
         "uHG25vSN": "2"
     }, 
     {
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8014", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "ふるい小銭入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106302900:600", 
+        "G4L0YIB2": "ふるい小銭入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106302900:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -429,6 +429,30 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "マグマのいしの欠片の入手数倍率増加（MAX+1200%）", 
         "YM5b90qZ": "106306000:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8030", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "BEクーポンの入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106306200:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8031", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "くるみの入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106306400:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8032", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "ギサールの種の入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106306500:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -613,6 +637,46 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "防衛システムレイドコインドロップ率", 
         "YM5b90qZ": "20:106305900:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9023", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "ガストンレイドコインドロップ率", 
+        "YM5b90qZ": "20:106306100:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9024", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "ダチャオ像レイドコインドロップ率", 
+        "YM5b90qZ": "20:106306300:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9025", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "エンゲルスレイドコインドロップ率", 
+        "YM5b90qZ": "20:106303200:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9026", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "3周年記念レイドコインドロップ率", 
+        "YM5b90qZ": "20:106306600:10", 
+        "uHG25vSN": "7"
+    }, 
+    {
+        "6uvHX2JG": "レイドイベント用ガチャアイテム", 
+        "7WYvz1Ep": "9027", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "キングゴールデンボムレイドコインドロップ率", 
+        "YM5b90qZ": "20:106306700:10", 
         "uHG25vSN": "7"
     }, 
     {
