--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -828,6 +828,12 @@
         "G4L0YIB2": "おしばいのチケット+100%"
     }, 
     {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8015004", 
+        "7WYvz1Ep": "8015", 
+        "G4L0YIB2": "おしばいのチケット+200%"
+    }, 
+    {
         "25oxcKwN": "50", 
         "3rXE9wdp": "8016001", 
         "7WYvz1Ep": "8016", 
@@ -1216,6 +1222,30 @@
         "3rXE9wdp": "8032004", 
         "7WYvz1Ep": "8032", 
         "G4L0YIB2": "ギサールの種+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
+        "3rXE9wdp": "8033001", 
+        "7WYvz1Ep": "8033", 
+        "G4L0YIB2": "クレジットチップ+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8033002", 
+        "7WYvz1Ep": "8033", 
+        "G4L0YIB2": "クレジットチップ+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8033003", 
+        "7WYvz1Ep": "8033", 
+        "G4L0YIB2": "クレジットチップ+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8033004", 
+        "7WYvz1Ep": "8033", 
+        "G4L0YIB2": "クレジットチップ+200%"
     }, 
     {
         "25oxcKwN": "50", 
