--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -315,8 +315,8 @@
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8015", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "おしばいのチケット入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106303100:600", 
+        "G4L0YIB2": "おしばいのチケット入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106303100:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -453,6 +453,14 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "ギサールの種の入手数倍率増加（MAX+1200%）", 
         "YM5b90qZ": "106306500:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8033", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "クレジットチップの入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106306800:1200", 
         "uHG25vSN": "2"
     }, 
     {
